@@ -246,6 +246,48 @@ CORBA::Short ChppciProblem_impl::setDiffusionNodePicker(CORBA::Short inProblemId
   return 0;
 }
 
+CORBA::Short ChppciProblem_impl::setDiffusionShooter(CORBA::Short inProblemId, 
+						     const char* inDiffusionShooterName,
+						     CORBA::Double inStandardDeviation)
+{
+  std::string diffusionShooterName(inDiffusionShooterName);
+  unsigned int hppProblemId = (unsigned int)inProblemId;
+
+  unsigned int nbProblems = attHppPlanner->getNbHppProblems();
+
+  // Test that rank is less than number of robots in vector.
+  if (hppProblemId < nbProblems) {
+    // Get roadmap builder in hppPlanner object.
+    CkwsDiffusingRdmBuilderShPtr roadmapBuilder = 
+      KIT_DYNAMIC_PTR_CAST(CkwsDiffusingRdmBuilder, 
+			   attHppPlanner->roadmapBuilderIthProblem(hppProblemId));
+    // Check that diffusion roadmap builder is set
+    if (!roadmapBuilder) {
+      ODEBUG1(" setDiffusionShooter: roadmap builder is not set or not of type diffusion");
+      return -1;
+    }
+    /* Check that name corresponds to a diffusion shooter factory */
+    if (!attHppciServer->diffusionShooterFactoryAlreadySet(diffusionShooterName)) {
+      ODEBUG1(" unknown diffusion shooter.");
+      return -1;
+    }
+
+    // Create diffusion shooter
+    CkwsDiffusionShooterShPtr diffusionShooter = 
+      attHppciServer->createDiffusionShooter(diffusionShooterName,
+					     inStandardDeviation);
+
+    ODEBUG2(" set roadmap builder diffusion shooter to " << diffusionShooterName);
+    roadmapBuilder->diffusionShooter(diffusionShooter);
+  }
+  else {
+    ODEBUG1(" setDiffusionShooter: wrong robot Id");
+    return -1;
+  }
+
+  return 0;
+}
+
 CORBA::Short ChppciProblem_impl::setInitialConfig(CORBA::Short inProblemId, const hppCorbaServer::dofSeq& dofArray) 
 {
   unsigned int hppProblemId = (unsigned int)inProblemId;
